fixed weather icon size on smaller screens

--- a/src/TodayWeather.css
+++ b/src/TodayWeather.css
@@ -102,4 +102,7 @@
     font-size: 14px;
     line-height: 16px;
   }
+  .TodayWeather .main-info .image-section img {
+    max-width: 90%;
+  }
 }
